--- a/style/style.css
+++ b/style/style.css
@@ -49,7 +49,7 @@ header > h1 {
     color: white;
     font-family: var(--fonte-destaque);
     font-weight: normal;
-    margin-bottom: 20px;
+    padding-bottom: 20px;
     font-weight: normal;
     font-size: 3em;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.349);
@@ -68,7 +68,8 @@ header > p{
 
 nav{
     background-color: var(--cor5);
-    padding: 10px;
+    padding:10px;
+    padding-top: 20px;
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.185);
 }
 
